# experimentCore

./: .gitignore  .gitmodules  DaniAPI.yaml  Lab Wiki.md  NewModel.md  README.md  buildEnvSetupForWin.md  common.py  configClient.json  configServer.json  controlClient.py  controlServer.py  gui.py  server.cc  setupWin.ps1  testServer.py
OpenAPI-proto/: README.md
OpenAPI-proto/models/: error.proto  inline_object.proto
OpenAPI-proto/services/: default_service.proto
cc/: __init__.py  common.py  controlClient.wxg  controlClient.wxg.bak  controlClientStereognosis.wxg  gui.py  gui.py.bak  helloWorld_pb2_grpc.py
cppCore/: readme.md
cppCore/stimServ2/: Configuration.cpp  Configuration.h  IMessenger.h  Log.cpp  Log.h  Messenger.cpp  Messenger.h  Nidaq.cpp  Nidaq.h  Stimulator.cpp  Stimulator.h  Tools.h  pch.h  stimServ2.cpp  stimServ2.sln  stimServ2.vcxproj  stimServ2.vcxproj.filters  vcpkg.json
cppServer/proto/: helloWorld.pb.cc  helloWorld.pb.h
cs/: __init__.py  common.py  experiment.py  motor.py  nidaq.py  recorder.py  requirements.txt  test.py
cs/components/: example-pydaqmx.py  motor.py  nidaq.py
faulhaberMotor/: readme.md
proto/: experimentControl.proto  gen.ps1  helloWorld.proto  teknicMotor.proto
pwsh/: InstallLibs.ps1  lib.ps1
pyClient/: helloWorld_pb2.py  helloWorld_pb2_grpc.py
pyUI/: configControlClient.json  controlClient.py  controlServer.py
teknicMotor/: .gitignore  CMakeLists.txt  build.ps1  motorAPI.cpp  motorMoveExample.cpp  readme.md
teknicMotor/sfoundation/: CMakeLists.txt  readme.md
teknicMotor/src/: CMakeLists.txt  main.cpp  motor.py  motorAPI.cpp  motorAPI.h  motorc.pyx  node.cpp  node.h  wrapNode.cpp
